deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cert-example
spec:
  template:
    spec:
      containers:
      - name: cert-example
        image: whoami:latest
        ports:
        - name: http
          containerPort: 8080
