service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cert-example
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
