ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cert-example
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production-http01
spec:
  tls:
  - hosts:
      - cert-example.oddbit.com
    secretName: cert-example-tls
  rules:
  - host: cert-example.oddbit.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cert-example
            port:
              name: http
